# nerve

./: .env.example  README.md  config.example.yaml  flake.nix  install.sh  pyproject.toml
docs/: architecture.md  config.md  memory.md  plans.md  setup.md  web-ui.md  worker-guide.md
nerve/: bootstrap.py  cli.py  config.py  workspace.py
nerve/agent/: engine.py  plan_service.py  sessions.py  streaming.py  tools.py
nerve/channels/: base.py  router.py  stream_adapter.py  telegram.py  web.py
nerve/cron/: jobs.py
nerve/db/: base.py  cron.py  sessions.py  sources.py  tasks.py  usage.py
nerve/db/migrations/: v018_task_tags.py  v019_session_model.py  v020_usage_tracking.py  v023_tasks_fts_slug.py  v027_cache_ttl_split.py
nerve/gateway/: routes.py  server.py
nerve/gateway/routes/: __init__.py  _deps.py  auth.py  cron.py  diagnostics.py  houseofagents.py  mcp_servers.py  (+7 more)
nerve/houseofagents/: __init__.py  config.py  pipelines.py  runner.py  service.py
nerve/memory/: memu_bridge.py
nerve/notifications/: service.py
nerve/proxy/: service.py
nerve/sources/: github.py  gmail.py  registry.py  runner.py
nerve/tasks/: models.py
nerve/utils/: time.py
scripts/: backfill_memu_embeddings.py
tests/: test_bootstrap.py  test_cli_upgrade.py  test_db.py  test_engine.py  test_gateway_ws.py  test_houseofagents.py  test_memu_bridge.py  test_plan_revise.py  test_proxy.py  test_send_file.py  test_sessions.py  test_streaming.py  test_telegram_split.py  test_tools_schemas.py  test_usage_cache_ttl.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
(+83 files in other folders)
